--- a/_posts/2018-08-12-Lab.md
+++ b/_posts/2018-08-12-Lab.md
@@ -5,7 +5,7 @@ categories:
  - Website
 tags:
 ---
-在 https://wallfacerlogic.github.io/Cloud/lab 文件夹中包含着该网站的测试网页（不定期更新）</br>
-..........</br>
-目前包含的测试网页:</br>
-[404.html](https://wallfacerlogic.github.io/Cloud/lab/404.html)</br>
+在 https://wallfacerlogic.github.io/Cloud/lab 文件夹中包含着该网站的测试网页（不定期更新)  
+..........  
+目前包含的测试网页:  
+[404.html](https://wallfacerlogic.github.io/Cloud/lab/404.html)
