--- a/_posts/2018-08-12-Lab.md
+++ b/_posts/2018-08-12-Lab.md
@@ -2,7 +2,7 @@
 title: The Lab
 description: 网站实验室
 categories:
- - Website
+ - Lab
 tags:
 ---
 在 https://wallfacerlogic.github.io/Cloud/lab 文件夹中包含着该网站的测试网页（不定期更新)  
