--- a/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
+++ b/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
@@ -11,29 +11,14 @@ tags: 薛定谔方程
 
 ## 1.推导
 
-对于定态薛定谔方程  
-$$
-H\psi=E\psi
-$$  
-其中  
-$$
-H = -\frac{\hbar^2}{2m}\frac{d^2}{dx^2}+V
-$$  
-
-记  
-$$
-C_1 = -\frac{\hbar^2}{2m}
-$$  
-对
-$$\frac{d^2}{dx^2}$$
-差分得  
+对于定态薛定谔方程$$H\psi=E\psi$$  
+其中$$H = -\frac{\hbar^2}{2m}\frac{d^2}{dx^2}+V$$  
+记$$C_1 = -\frac{\hbar^2}{2m}$$  
+对$$\frac{d^2}{dx^2}$$差分得  
 $$
 \frac{d^2}{dx^2} \approx \frac{\psi_{i+1}-2\psi_i+\psi_{i-1}}{\triangle x^2}
 $$  
-上式可改为矩阵形式，则定态薛定谔方程可改写为  
-$$
-H\Psi = E\Psi
-$$  
+上式可改为矩阵形式，则定态薛定谔方程可改写为$$H\Psi = E\Psi$$  
 其中  
 $$
 \Psi = 
