添加文章，修改文章分类和Tag

--- a/_posts/2018-07-20-excerpts.md
+++ b/_posts/2018-07-20-excerpts.md
@@ -1,8 +1,6 @@
 ---
 title: Excerpts
-tags:
-categories:
- - Test
+categories: 网站测试
 ---
 
 The following contents should be invisible in home/archive page.
