--- a/_posts/2021-2-13-GCore.md
+++ b/_posts/2021-2-13-GCore.md
@@ -3,18 +3,17 @@
 title: GCore 0.3.6
 description: GCore
 categories:
- - Verilog
- - GCore
-tags: GCore
+ - 计算机
+tags: [Verilog, GCore, FPGA, CPU]
 ---
 
 # GCore  
 
 ---
 
-#### 基于Tang Nano FPGA的极简RISC CPU
+基于Tang Nano FPGA的极简RISC CPU
 
-##### Version:0.3.6 Beta 
+Version:0.3.6 Beta 
 
 项目地址：<https://github.com/ghe0000/GCore>
 
@@ -135,8 +134,6 @@ FPGA 属于专用集成电路中的一种半定制电路。芯片里面有非常
 // 跳转至寄存器0000
 00010000
 ```
-
-
 
 ---
 
