--- a/_posts/2018-08-12-Lab.md
+++ b/_posts/2018-08-12-Lab.md
@@ -1,10 +1,14 @@
 ---
 title: The Lab
-description: 网站实验室
+description: 新网页测试
 categories:
- - Lab
-tags:
+ - 网站测试
 ---
 在 https://ghe0000.github.io/Cloud/lab 文件夹中包含着该网站的测试网页（不定期更新)  
 目前包含的测试网页:  
-[404.html](https://ghe0000.github.io/Cloud/lab/404.html)
+
+404页面
+<https://ghe0000.github.io/Cloud/lab/404.html>
+
+鼠标点击出现文字测试  
+<https://ghe0000.github.io/Cloud/lab/Ripple.html>
