--- a/_posts/2021-1-25-Verilog.md
+++ b/_posts/2021-1-25-Verilog.md
@@ -2,10 +2,11 @@
 title: Verilog笔记
 description: Verilog笔记
 categories:
- - Verilog
+ - 语法笔记
+tags: [Verilog]
 ---
 
-## RTL: 模块声明与例化(Module)
+# RTL: 模块声明与例化(Module)
 
 - 使用ANSI-C风格端口列表
 - 参数化
@@ -39,7 +40,7 @@ mini_top #(
 );
 ```
 
-## RTL: 常数
+# RTL: 常数
 
 - 使用`define`定义全局常数
 - 使用`localparam` 定义局部常数
@@ -59,7 +60,7 @@ localparam NUM_8 = `NUM_1;
 localparam NUM_9 = `NUM_1 + NUM_6 - 31;
 ```
 
-## RTL: 变量(wire, reg)
+# RTL: 变量(wire, reg)
 
 - 给变量起个合适的名字
 - wire只用于组合逻辑 
@@ -104,7 +105,7 @@ always @ (posedge clk or negedge rst_n) begin
 end
 ```
 
-## RTL: 运算符
+# RTL: 运算符
 
 - 用括号保证优先级
 - 优先级顺序表从高到低
@@ -127,7 +128,7 @@ end
 ```
 
 
-## RTL: 函数(function)
+# RTL: 函数(function)
 
 - 可综合
 - 在模块中定义
@@ -152,7 +153,7 @@ wire [7:0] temp_max;
 assign temp_max = max(i_din[7:0], NUM_6);
 ```
 
-## RTL: 存储器(SRAM)
+# RTL: 存储器(SRAM)
 
 - 可仿真，可综合，可用于fpga
 - 使用工艺库的memory compiler
@@ -192,7 +193,7 @@ end
 endmodule
 ```
 
-## RTL: 存储器(ROM)
+# RTL: 存储器(ROM)
 
 - 可仿真，可综合，可用于fpga
 - 使用工艺库的memory compiler
@@ -243,7 +244,7 @@ end
 endmodule
 ```
 
-## TB : 仿真精度(timescale)
+# TB : 仿真精度(timescale)
 
 - 或者在仿真器命令选项指定
 
@@ -251,7 +252,7 @@ endmodule
 `timescale 1ns/10ps 
 ```
 
-## TB : 任务(task)
+# TB : 任务(task)
 
 - 不可综合
 
@@ -266,7 +267,7 @@ initial begin
 end
 ```
 
-## TB : 时钟与复位产生(clock_reset_gen)
+# TB : 时钟与复位产生(clock_reset_gen)
 
 
 ```verilog
@@ -279,7 +280,7 @@ end
 always #(`CLOCK_CYCLE/2) clk=~clk;
 ```
 
-## TB : 波形文件产生(wave_dump)
+# TB : 波形文件产生(wave_dump)
 
 ```verilog
 // use +define+DUMP_FSDB in vsim command
@@ -298,7 +299,7 @@ end
 ```
 
 
-## TB : 存储器初始化(mem_init)
+# TB : 存储器初始化(mem_init)
 
 ```verilog
 // memory initilization
@@ -315,7 +316,7 @@ end
 ```
 
 
-## RUN : Makefile
+# RUN : Makefile
 
 ```makefile
 PROJ_PATH = ../..
@@ -337,7 +338,7 @@ listfile:
 	@ls $(TB_PATH)/*.v  >> $(FILE_LIST)
 ```
 
-## RUN : Questasim(sim.do)
+# RUN : Questasim(sim.do)
 
 ```tcl
 vlib work
