--- a/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
+++ b/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
@@ -2,9 +2,9 @@
 title: 计算机解一维定态薛定谔方程
 description: 计算机解一维定态薛定谔方程
 categories:
- - Math
- - Physics
-tags: 薛定谔方程
+ - 物理
+ - 计算机
+tags: [薛定谔方程,计算物理,定态,Matlab]
 ---
 
 # 计算机解一维定态薛定谔方程
