--- a/_posts/2023-7-15-指标法.md
+++ b/_posts/2023-7-15-指标法.md
@@ -19,7 +19,7 @@ tags: [物理,公式推导,矢量分析,指标法]
 
 2.  在一个式子中，指标最多不超过两次出现。
 
-3.  一般拉丁字母（$i,j,k$等）认为可取$1,2,3$，而希腊字母（$\mu,\nu,\rho$)等）认为可取$0,1,2,3$或者$1,2,3,4$。
+3.  一般拉丁字母（$i,j,k$等）认为可取$1,2,3$，而希腊字母（$\mu,\nu,\rho$等）认为可取$0,1,2,3$或者$1,2,3,4$。
 
 ## 例子
 
@@ -163,7 +163,9 @@ $$\begin{aligned}
                                             &=-(\delta_{ij} \delta_{mk} - \delta_{ik} \delta_{mj}) a_i b_j c_k e^m 
 \end{aligned}$$
 
-其中 $$\begin{aligned}
+其中
+
+$$\begin{aligned}
     -\delta_{ij} \delta_{mk} a_i b_j c_k e^m &= - a_i b_i c_k e^k &= - (\boldsymbol{a} \cdot \boldsymbol{b}) \boldsymbol{c} \\
     \delta_{ik} \delta_{mj} a_i b_j c_k e^m &= a_i c_i b_j e^j &= (\boldsymbol{a} \cdot \boldsymbol{c}) \boldsymbol{b}
 \end{aligned}$$
