--- a/_posts/2023-7-15-指标法.md
+++ b/_posts/2023-7-15-指标法.md
@@ -165,8 +165,7 @@ $$\begin{aligned}
 
 其中
 
-$$\begin{aligned}
-    -\delta_{ij} \delta_{mk} a_i b_j c_k e^m = - a_i b_i c_k e^k = - (\boldsymbol{a} \cdot \boldsymbol{b}) \boldsymbol{c}$$
+$$-\delta_{ij} \delta_{mk} a_i b_j c_k e^m = - a_i b_i c_k e^k = - (\boldsymbol{a} \cdot \boldsymbol{b}) \boldsymbol{c}$$
 
 $$\delta_{ik} \delta_{mj} a_i b_j c_k e^m = a_i c_i b_j e^j = (\boldsymbol{a} \cdot \boldsymbol{c}) \boldsymbol{b}$$
 
