--- a/_posts/2023-7-17-随想.md
+++ b/_posts/2023-7-17-随想.md
@@ -9,11 +9,11 @@ tag: [物理,微分几何,随想]
 
 **因笔者学识不深，只略了解些许皮毛，故文章不保证严谨**
 
-# 从$\mathop{}\!\mathrm{d}x$开始
+# 从$\mathrm{d}x$开始
 
-在一般的认识中，对于$y = f(x)$，有$\Delta y = f^{\prime} (x_0) \Delta x + \alpha \Delta x$，可以证明在$\Delta x$趋于$0$时，$\Delta y$与$\mathop{}\!\mathrm{d}y$为等价无穷小，故在$|\Delta x|$很小时，有$\Delta y \approx \mathop{}\!\mathrm{d}y$，此时把自变量$\Delta x$记作$\mathop{}\!\mathrm{d}x$，认为其为某个无穷小量的记号，于是$\mathop{}\!\mathrm{d}y = f^{\prime} (x_0) \mathop{}\!\mathrm{d}x$。
+在一般的认识中，对于$y = f(x)$，有$\Delta y = f^{\prime} (x_0) \Delta x + \alpha \Delta x$，可以证明在$\Delta x$趋于$0$时，$\Delta y$与$\mathrm{d}y$为等价无穷小，故在$|\Delta x|$很小时，有$\Delta y \approx \mathrm{d}y$，此时把自变量$\Delta x$记作$\mathrm{d}x$，认为其为某个无穷小量的记号，于是$\mathrm{d}y = f^{\prime} (x_0) \mathrm{d}x$。
 
-但在微分几何中给了$\mathop{}\!\mathrm{d}x$一种不同的解释。这里有一个不涉及微分几何语言的简单但不一定准确的例子：在多元函数$f(x_1,x_2,\cdots,x_n)$中，其为$f:\mathbb{R}^n \rightarrow \mathbb{R}$，它的梯度为
+但在微分几何中给了$\mathrm{d}x$一种不同的解释。这里有一个不涉及微分几何语言的简单但不一定准确的例子：在多元函数$f(x_1,x_2,\cdots,x_n)$中，其为$f:\mathbb{R}^n \rightarrow \mathbb{R}$，它的梯度为
 
 $$\nabla f := 
 \begin{pmatrix}
@@ -33,15 +33,15 @@ $$\Delta y \approx \nabla f \cdot \Delta x, \quad \Delta x \in \mathbb{R}^n$$
 
 这里$\Delta y \in \mathbb{R}$，$\Delta x \in \mathbb{R}^n$，故上面操作建立了一个从$\mathbb{R}^n$到$\mathbb{R}$的映射，即函数的微分确立了如下映射：
 
-$$\mathop{}\!\mathrm{d}f : \mathbb{R}^n \rightarrow \mathbb{R}, \quad \Delta x \mapsto \nabla f \cdot \Delta x, \quad \Delta x \in \mathbb{R}^n$$
+$$\mathrm{d}f : \mathbb{R}^n \rightarrow \mathbb{R}, \quad \Delta x \mapsto \nabla f \cdot \Delta x, \quad \Delta x \in \mathbb{R}^n$$
 
 而多元函数的微分可写为
 
-$$\mathop{}\!\mathrm{d}f = \sum_{i=1}^n \frac{\partial f}{\partial x_i} \mathop{}\!\mathrm{d}x_i$$
+$$\mathrm{d}f = \sum_{i=1}^n \frac{\partial f}{\partial x_i} \mathrm{d}x_i$$
 
-故可知，$\mathop{}\!\mathrm{d}x_i$是这样一个映射：
+故可知，$\mathrm{d}x_i$是这样一个映射：
 
-$$\mathop{}\!\mathrm{d}x_i : \mathbb{R}^n \rightarrow \mathbb{R}, \quad 
+$$\mathrm{d}x_i : \mathbb{R}^n \rightarrow \mathbb{R}, \quad 
 \begin{pmatrix}
     x_1 \\
     x_2 \\
@@ -66,15 +66,15 @@ $$<x,y> =
 
 这里我们可不严谨地认为，一个所有列向量的集合为$V$，所有行向量的集合为$V^{*}$。且它们**互为对偶**($V^{**} = V$)。
 
-因此可知，对偶空间的**基**是将$x, x \in \mathbb{R}^n$变成$V$上的基$x_i$的映射，也就是$\mathop{}\!\mathrm{d}x$。
+因此可知，对偶空间的**基**是将$x, x \in \mathbb{R}^n$变成$V$上的基$x_i$的映射，也就是$\mathrm{d}x$。
 
 也因此，函数的微分和梯度互为对偶：
 
-$$\nabla f \in \mathbb{R}^n, \quad \mathop{}\!\mathrm{d}f \in (\mathbb{R})^{*}$$
+$$\nabla f \in \mathbb{R}^n, \quad \mathrm{d}f \in (\mathbb{R})^{*}$$
 
 # 更多的映射
 
-上面我们可以看到，$\mathop{}\!\mathrm{d}x$可以看成对偶空间的基，而行向量则被认为是一种从$\mathbb{R}^n$上向量空间$V$到$\mathbb{R}$上的映射，进一步，其实所有矢量都可以被看成一种$\mathbb{R}^n$中光滑函数的集合$\mathscr{F}_{\mathbb{R}^n}$到$\mathbb{R}$的一种映射，即$\boldsymbol{v} : \mathscr{F}_{\mathbb{R}^n} \rightarrow \mathbb{R}$，也就是说，矢量是一种把在$\mathbb{R}^n$上任意$C^{\infty}$（即任意阶导数存在且连续）函数$f$变成实数的映射。
+上面我们可以看到，$\mathrm{d}x$可以看成对偶空间的基，而行向量则被认为是一种从$\mathbb{R}^n$上向量空间$V$到$\mathbb{R}$上的映射，进一步，其实所有矢量都可以被看成一种$\mathbb{R}^n$中光滑函数的集合$\mathscr{F}_{\mathbb{R}^n}$到$\mathbb{R}$的一种映射，即$\boldsymbol{v} : \mathscr{F}_{\mathbb{R}^n} \rightarrow \mathbb{R}$，也就是说，矢量是一种把在$\mathbb{R}^n$上任意$C^{\infty}$（即任意阶导数存在且连续）函数$f$变成实数的映射。
 
 微分流形$M$上开覆盖${O_{\alpha}}$（开子集的集合）中$O_{\alpha}$有映射$\psi_{\alpha}:O_{\alpha} \rightarrow V_{\alpha}$，其中$V_{\alpha}$为$\mathbb{R}^n$用通常括扑衡量的开子集。则$(O_{\alpha},\psi_{\alpha})$构成一个（局域）**坐标系**，坐标域为$O_{\alpha}$。
 
