--- a/_posts/2023-7-17-随想.md
+++ b/_posts/2023-7-17-随想.md
@@ -11,7 +11,7 @@ tag: [物理,微分几何,随想]
 
 # 从$\mathrm{d}x$开始
 
-在一般的认识中，对于$y = f(x)$，有$\Delta y = f^{\prime} (x_0) \Delta x + \alpha \Delta x$，可以证明在$\Delta x$趋于$0$时，$\Delta y$与$\mathrm{d}y$为等价无穷小，故在$|\Delta x|$很小时，有$\Delta y \approx \mathrm{d}y$，此时把自变量$\Delta x$记作$\mathrm{d}x$，认为其为某个无穷小量的记号，于是$\mathrm{d}y = f^{\prime} (x_0) \mathrm{d}x$。
+在一般的认识中，对于$y = f(x)$，有$\Delta y = f^{\prime} (x_0) \Delta x + \alpha \Delta x$，可以证明在$\Delta x$趋于$0$时，$\Delta y$与$\mathrm{d}y$为等价无穷小，故在$\Delta x$很小时，有$\Delta y \approx \mathrm{d}y$，此时把自变量$\Delta x$记作$\mathrm{d}x$，认为其为某个无穷小量的记号，于是$\mathrm{d}y = f^{\prime} (x_0) \mathrm{d}x$。
 
 但在微分几何中给了$\mathrm{d}x$一种不同的解释。这里有一个不涉及微分几何语言的简单但不一定准确的例子：在多元函数$f(x_1,x_2,\cdots,x_n)$中，其为$f:\mathbb{R}^n \rightarrow \mathbb{R}$，它的梯度为
 
