--- a/_posts/2023-7-17-随想.md
+++ b/_posts/2023-7-17-随想.md
@@ -80,4 +80,4 @@ $$\nabla f \in \mathbb{R}^n, \quad \mathrm{d}f \in (\mathbb{R})^{*}$$
 
 而我们所熟知的**极坐标**，本质上是二维流形$\mathbb{R}^2$选取了除了恒等映射所对应的坐标系外的另一个坐标系，也就是选取了$(O_{\beta},\psi_{\beta})$，其中$\psi_{\beta}$把$p \in O_{\beta}$映为$\psi_{\beta}(p) \in \mathbb{R}^2$，而其对应的自然坐标就是极坐标中的坐标。而所谓的极坐标中坐标原点的奇异性，其实是因为极坐标的坐标域$O_{\beta}$并不包含原点。
 
-而微分流形$M$上若存在映射$f:M \rightarrow \mathbb{R}$，则$f$为M上的**标量场**或M上的**函数**。物理中众所周知的点电荷电势便是$\mathbb{R}^3$上流形$M=\mathbb{R}^3 - {q}$上的光滑函数，也因为流形$M$上不包含点电荷$q$所对应的点，故点电荷所在的点的电势无定义，从而无意义。
+而微分流形$M$上若存在映射$f:M \rightarrow \mathbb{R}$，则$f$为M上的**标量场**或M上的**函数**。物理中众所周知的点电荷电势便是$\mathbb{R}^3$上流形$M=\mathbb{R}^3 - \{q\}$上的光滑函数，也因为流形$M$上不包含点电荷$q$所对应的点，故点电荷所在的点的电势无定义，从而无意义。
