--- a/_posts/2023-7-17-随想.md
+++ b/_posts/2023-7-17-随想.md
@@ -74,7 +74,11 @@ $$\nabla f \in \mathbb{R}^n, \quad \mathrm{d}f \in (\mathbb{R})^{*}$$
 
 # 更多的映射
 
-上面我们可以看到，$\mathrm{d}x$可以看成对偶空间的基，而行向量则被认为是一种从$\mathbb{R}^n$上向量空间$V$到$\mathbb{R}$上的映射，进一步，其实所有矢量都可以被看成一种$\mathbb{R}^n$中光滑函数的集合$\mathscr{F}_{\mathbb{R}^n}$到$\mathbb{R}$的一种映射，即$\boldsymbol{v} : \mathscr{F}_{\mathbb{R}^n} \rightarrow \mathbb{R}$，也就是说，矢量是一种把在$\mathbb{R}^n$上任意$C^{\infty}$（即任意阶导数存在且连续）函数$f$变成实数的映射。
+上面我们可以看到，$\mathrm{d}x$可以看成对偶空间的基，而行向量则被认为是一种从 $\mathbb{R}^n$ 上向量空间 $V$ 到 $\mathbb{R}$ 上的映射，进一步，其实所有矢量都可以被看成一种 $\mathbb{R}^n$ 中光滑函数的集合 $\mathscr{F}_{\mathbb{R}^n}$ 到 $\mathbb{R}$ 的一种映射，即：
+
+$$\boldsymbol{v} : \mathscr{F}_{\mathbb{R}^n} \rightarrow \mathbb{R}$$
+
+也就是说，矢量是一种把在 $\mathbb{R}^n$ 上任意 $C^{\infty}$（即任意阶导数存在且连续）函数$f$变成实数的映射。
 
 微分流形$M$上开覆盖${O_{\alpha}}$（开子集的集合）中$O_{\alpha}$有映射$\psi_{\alpha}:O_{\alpha} \rightarrow V_{\alpha}$，其中$V_{\alpha}$为$\mathbb{R}^n$用通常括扑衡量的开子集。则$(O_{\alpha},\psi_{\alpha})$构成一个（局域）**坐标系**，坐标域为$O_{\alpha}$。
 
