--- a/_posts/2023-7-21-指标法.md
+++ b/_posts/2023-7-21-指标法.md
@@ -108,7 +108,7 @@ $$\epsilon_{ijk} =
 $$\epsilon_{ijk} \epsilon_{lmn} = 
 \begin{vmatrix}
     \delta_{il} & \delta_{im} & \delta_{in} \\
-    \delta_{jl} & \delta_{jm} &\delta_{jn} \\
+    \delta_{jl} & \delta_{jm} & \delta_{jn} \\
     \delta_{kl} & \delta_{km} & \delta_{kn}
 \end{vmatrix}$$
 
@@ -117,6 +117,7 @@ $$\epsilon_{ijk} \epsilon_{imn} =
     \delta_{jm} & \delta_{jn} \\
     \delta_{km} & \delta_{kn}
 \end{vmatrix}
+
 = \delta_{jm} \delta_{kn} - \delta_{km} \delta_{kn}$$
 
 # 矢量运算
@@ -166,7 +167,6 @@ $$\begin{aligned}
 其中
 
 $$-\delta_{ij} \delta_{mk} a_i b_j c_k e^m = - a_i b_i c_k e^k = - (\boldsymbol{a} \cdot \boldsymbol{b}) \boldsymbol{c}$$
-
 $$\delta_{ik} \delta_{mj} a_i b_j c_k e^m = a_i c_i b_j e^j = (\boldsymbol{a} \cdot \boldsymbol{c}) \boldsymbol{b}$$
 
 综上
@@ -178,6 +178,12 @@ $$\boldsymbol{a} \times (\boldsymbol{b} \times \boldsymbol{c}) = (\boldsymbol{a}
 哈密顿算子
 
 $$\nabla = \boldsymbol{i} \frac{\partial}{\partial x} + \boldsymbol{j} \frac{\partial}{\partial y} + \boldsymbol{k} \frac{\partial}{\partial z} = e^i \partial_i$$
+
+莱布尼茨律
+
+对于微分算子$\partial_i$，有
+
+$$\partial_i (A_j B_k) = A_j \partial_i B_k + B_k \partial_i A_j$$
 
 梯度
 
@@ -192,3 +198,64 @@ $$\nabla \cdot \boldsymbol{A} = \partial_i A_i$$
 $$\nabla \times \boldsymbol{A} = \epsilon_{ijk} \partial_i A_j e^k$$
 
 # 场论公式推导
+
+**注意：**在进行场论公式推导时，$\epsilon_{ijk}, \delta_{ij},e^i$可任意调换位置移动，但$\partial_i$不可以，否则会改变作用对象。
+
+## $\nabla (a b)$
+
+$$\nabla (ab) = e^i \partial_i (ab) = a (e^i \partial_i b) + b (e^i \partial_i a) = a \nabla b + b \nabla a$$
+
+## $\nabla \cdot (a \boldsymbol{B})$
+
+$$\begin{aligned}
+    \nabla \cdot (a \boldsymbol{B}) &= \partial_i [a \boldsymbol{B}]_i \\
+    &= \partial_i (a B_i) \\
+    &= a \partial_i B_i + B_i \partial_i a \\
+    &= a \nabla \cdot \boldsymbol{B} + \boldsymbol{B} \cdot \nabla a
+\end{aligned}$$
+
+## $\nabla \times (a \boldsymbol{B})$
+
+$$\begin{aligned}
+    \nabla \times (a \boldsymbol{B}) &= \epsilon_{ijk} \partial_i [a \boldsymbol{B}]_j e^k \\
+    &= \epsilon_{ijk} \partial_i (a B_j) e^k \\
+    &= \epsilon_{ijk} a \partial_i B_j e^k + \epsilon_{ijk} B_j \partial_i a e^k \\
+    &= a \nabla \times \boldsymbol{B} + (\nabla a) \times \boldsymbol{B}
+\end{aligned}$$
+
+## $\nabla \cdot (\boldsymbol{A} \times \boldsymbol{B})$
+
+$$\begin{aligned}
+    \nabla \cdot (\boldsymbol{A} \times \boldsymbol{B}) &= \nabla \cdot (\epsilon_{ijk} A_i B_j e^k) \\
+    &= \partial_k \epsilon_{ijk} (A_i B_j)
+    &= \epsilon_{ijk} (A_i \partial_k B_j + B_j \partial_k A_i) \\
+    &= - A_i \epsilon_{kji} \partial_k B_j + B_j \epsilon_{kij} \partial_{k} A_i \\
+    &= \boldsymbol{B} \cdot (\nabla \times \boldsymbol{A}) - \boldsymbol{A} \cdot (\nabla \times \boldsymbol{B})
+\end{aligned}$$
+
+## $\nabla \times (\boldsymbol{A} \times \boldsymbol{B})$
+
+$$\begin{aligned}
+    \nabla \times (\boldsymbol{A} \times \boldsymbol{B}) &= e^i \partial_i \times (a_j b_k \epsilon_{jkl} e^l) \\
+    &= \partial_i \epsilon_{ilm} \epsilon_{jkl} a_j b_k e^m \\
+    &= (\delta_{mj} \delta_{ik} - \delta_{mk} \delta_{ij}) \partial_i (a_j b_k) e^m \\
+    &= (\delta_{mj} \delta_{ik} - \delta_{mk} \delta_{ij})(a_j \partial_i b_k + b_k \partial_i a_j)
+\end{aligned}$$
+
+上面可分成四部分：
+
+Part1:
+$$\delta_{mj} \delta_{ik} a_j \partial_i b_k e^m = a_i e^i \partial_j b_j = \boldsymbol{A}(\nabla \cdot \boldsymbol{B})$$
+
+Part2:
+$$- \delta_{mk} \delta_{ij} a_j \partial_i b_k e^m = - (a_i \partial_i) b_j e^j = - (\boldsymbol{A} \cdot \nabla) \boldsymbol{B}$$
+
+Part3:
+$$\delta_{mj} \delta_{ik} b_k \partial_i a_j e^m = (b_k \partial_k) a_i e^i = (\boldsymbol{B} \cdot \nabla) \boldsymbol{A}$$
+
+Part4:
+$$- \delta_{mk} \delta_{ij} b_k \partial_i a_j e^m = - b_k e^k \partial_i a_i = - \boldsymbol{B}(\nabla \cdot \boldsymbol{A})$$
+
+综上
+
+$$\nabla \times (\boldsymbol{A} \times \boldsymbol{B}) = \boldsymbol{A}(\nabla \cdot \boldsymbol{B}) - (\boldsymbol{A} \cdot \nabla) \boldsymbol{B} + (\boldsymbol{B} \cdot \nabla) \boldsymbol{A} - \boldsymbol{B}(\nabla \cdot \boldsymbol{A})$$
