--- a/_posts/2023-7-21-指标法.md
+++ b/_posts/2023-7-21-指标法.md
@@ -167,6 +167,7 @@ $$\begin{aligned}
 其中
 
 $$-\delta_{ij} \delta_{mk} a_i b_j c_k e^m = - a_i b_i c_k e^k = - (\boldsymbol{a} \cdot \boldsymbol{b}) \boldsymbol{c}$$
+
 $$\delta_{ik} \delta_{mj} a_i b_j c_k e^m = a_i c_i b_j e^j = (\boldsymbol{a} \cdot \boldsymbol{c}) \boldsymbol{b}$$
 
 综上
@@ -201,11 +202,11 @@ $$\nabla \times \boldsymbol{A} = \epsilon_{ijk} \partial_i A_j e^k$$
 
 **注意：**在进行场论公式推导时，$\epsilon_{ijk}, \delta_{ij},e^i$可任意调换位置移动，但$\partial_i$不可以，否则会改变作用对象。
 
-## $\nabla (a b)$
+$\nabla (a b)$:
 
 $$\nabla (ab) = e^i \partial_i (ab) = a (e^i \partial_i b) + b (e^i \partial_i a) = a \nabla b + b \nabla a$$
 
-## $\nabla \cdot (a \boldsymbol{B})$
+$\nabla \cdot (a \boldsymbol{B})$:
 
 $$\begin{aligned}
     \nabla \cdot (a \boldsymbol{B}) &= \partial_i [a \boldsymbol{B}]_i \\
@@ -214,7 +215,7 @@ $$\begin{aligned}
     &= a \nabla \cdot \boldsymbol{B} + \boldsymbol{B} \cdot \nabla a
 \end{aligned}$$
 
-## $\nabla \times (a \boldsymbol{B})$
+$\nabla \times (a \boldsymbol{B})$:
 
 $$\begin{aligned}
     \nabla \times (a \boldsymbol{B}) &= \epsilon_{ijk} \partial_i [a \boldsymbol{B}]_j e^k \\
@@ -223,17 +224,17 @@ $$\begin{aligned}
     &= a \nabla \times \boldsymbol{B} + (\nabla a) \times \boldsymbol{B}
 \end{aligned}$$
 
-## $\nabla \cdot (\boldsymbol{A} \times \boldsymbol{B})$
+$\nabla \cdot (\boldsymbol{A} \times \boldsymbol{B})$:
 
 $$\begin{aligned}
     \nabla \cdot (\boldsymbol{A} \times \boldsymbol{B}) &= \nabla \cdot (\epsilon_{ijk} A_i B_j e^k) \\
-    &= \partial_k \epsilon_{ijk} (A_i B_j)
+    &= \partial_k \epsilon_{ijk} (A_i B_j) \\
     &= \epsilon_{ijk} (A_i \partial_k B_j + B_j \partial_k A_i) \\
     &= - A_i \epsilon_{kji} \partial_k B_j + B_j \epsilon_{kij} \partial_{k} A_i \\
     &= \boldsymbol{B} \cdot (\nabla \times \boldsymbol{A}) - \boldsymbol{A} \cdot (\nabla \times \boldsymbol{B})
 \end{aligned}$$
 
-## $\nabla \times (\boldsymbol{A} \times \boldsymbol{B})$
+$\nabla \times (\boldsymbol{A} \times \boldsymbol{B})$:
 
 $$\begin{aligned}
     \nabla \times (\boldsymbol{A} \times \boldsymbol{B}) &= e^i \partial_i \times (a_j b_k \epsilon_{jkl} e^l) \\
@@ -245,15 +246,19 @@ $$\begin{aligned}
 上面可分成四部分：
 
 Part1:
+
 $$\delta_{mj} \delta_{ik} a_j \partial_i b_k e^m = a_i e^i \partial_j b_j = \boldsymbol{A}(\nabla \cdot \boldsymbol{B})$$
 
 Part2:
+
 $$- \delta_{mk} \delta_{ij} a_j \partial_i b_k e^m = - (a_i \partial_i) b_j e^j = - (\boldsymbol{A} \cdot \nabla) \boldsymbol{B}$$
 
 Part3:
+
 $$\delta_{mj} \delta_{ik} b_k \partial_i a_j e^m = (b_k \partial_k) a_i e^i = (\boldsymbol{B} \cdot \nabla) \boldsymbol{A}$$
 
 Part4:
+
 $$- \delta_{mk} \delta_{ij} b_k \partial_i a_j e^m = - b_k e^k \partial_i a_i = - \boldsymbol{B}(\nabla \cdot \boldsymbol{A})$$
 
 综上
