modified:   "_posts/2023-9-6-\347\275\221\347\253\231\346\225\264\347\220\206\346\224\266\351\233\206.md"

--- a/_posts/2023-9-6-网站整理收集.md
+++ b/_posts/2023-9-6-网站整理收集.md
@@ -1,11 +1,12 @@
 ---
 title: 网站整理收集
-description: 网站整理收集
+description: 常用网站整理收集
 categories:
   - 计算机
 tags:
   - 收集
 ---
+
 # 电子书查找&下载
 
 - [Library Genesis（免费电子书下载）](https://libgen.click/)
@@ -29,11 +30,13 @@ tags:
 
 - [TeXPage - LaTeX 在线编辑器](https://texpage.com/)
 - [Microsoft 365](https://www.office.com)
+
 # 网页工具
 
 - [在线LaTeX公式编辑器](https://www.latexlive.com/##)
 - [在线PS](http://ps.gzqizhen.com/)
 - [乐源（百度文库网页转换）](http://leyuanxm.top/)
+
 # 搜索相关
 
 - [Google 浙大镜像](https://g.luciaz.me/) （三个问题的答案：心灵之约、水朝夕、csxy@123）
