--- a/_posts/2023-9-6-网站整理收集.md
+++ b/_posts/2023-9-6-网站整理收集.md
@@ -41,10 +41,12 @@ tags:
 
 - [Google 浙大镜像](https://g.luciaz.me/) （三个问题的答案：心灵之约、水朝夕、csxy@123）
 - [谷粉学术（论文收集）](https://gfsoso.99lb.net/)
+- [Approach Zero (LaTeX公式搜索)](https://approach0.xyz/search/)
 
 # AI工具
 
 - [boardmix（AI白板）](https://boardmix.cn/)
 - [remove（AI抠图）](https://www.remove.bg/zh/upload)
 - [稿定设计（AI图像处理）](https://www.gaoding.com/)
+- [AI Polish (AI阅读&AI润色)](https://polish.readpaper.com/welcome)
 
