--- a/_posts/2023-9-6-网站整理收集.md
+++ b/_posts/2023-9-6-网站整理收集.md
@@ -22,6 +22,7 @@ tags:
 - [谷粉学术论坛-文献互助](http://bbs.99lb.net/)
 
 # 打字练习
+
 - [双拼练习 @ BlueSky](https://api.ihint.me/shuang/)
 - [dazidazi-在线打字练习网站](https://dazidazi.com/)
 - [Qwerty Learner（打字同时记忆单词）](https://qwerty.kaiyi.cool/)
@@ -50,3 +51,6 @@ tags:
 - [稿定设计（AI图像处理）](https://www.gaoding.com/)
 - [AI Polish (AI阅读&AI润色)](https://polish.readpaper.com/welcome)
 
+# 设计
+- [ColorMind（AI配色）](http://colormind.io/)
+- [BrandMark（AI Logo设计）](https://brandmark.io/)
