--- a/_posts/2018-08-29-Makedown.md
+++ b/_posts/2018-08-29-Makedown.md
@@ -1,9 +1,10 @@
 ---
-title: Makedown语法笔记
-description: Makedown语法笔记
+title: Makedown 语法笔记
+description: Makedown 语法笔记
 categories:
- - 语法笔记
-tags: Markdown 
+  - 语法笔记
+tags:
+  - Markdown 
 ---
 
 <!-- more -->
