--- a/_posts/2021-1-25-Verilog.md
+++ b/_posts/2021-1-25-Verilog.md
@@ -1,9 +1,10 @@
 ---
-title: Verilog笔记
-description: Verilog笔记
+title: Verilog 笔记
+description: Verilog 笔记
 categories:
- - 语法笔记
-tags: [Verilog]
+  - 语法笔记
+tags:
+  - Verilog
 ---
 
 这里整理了常用的 Verilog 代码笔记。
