--- a/_posts/2021-2-13-GCore.md
+++ b/_posts/2021-2-13-GCore.md
@@ -1,8 +1,10 @@
 ---
 title: GCore
 categories:
- - 计算机
-tags: [Verilog, GCore, FPGA, CPU]
+  - 计算机
+tags:
+  - Verilog
+  - CPU
 ---
 
 一个基于 Tang Nano FPGA 的极简 RISC CPU
