--- a/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
+++ b/_posts/2021-8-11-计算机解一维定态薛定谔方程.md
@@ -1,9 +1,10 @@
 ---
 title: 计算机解一维定态薛定谔方程
 categories:
- - 物理
- - 计算机
-tags: [薛定谔方程,计算物理,定态,Matlab]
+  - 物理
+tags:
+  - 薛定谔方程
+  - 计算机模拟
 ---
 
 一个使用计算机求解一维定态薛定谔方程的笔记。
