--- a/_posts/2023-7-20-指标法.md
+++ b/_posts/2023-7-20-指标法.md
@@ -3,9 +3,9 @@ title: 矢量分析指标法
 description: 指标法矢量分析公式推导
 toc: true
 categories:
- - 物理
- - 数学方法和技巧
-tags: [物理,公式推导,矢量分析,指标法]
+  - 数学
+tags: 
+  - 矢量分析
 ---
 
 在矢量分析中，一种很方便的方法是指标法。指标法通过爱因斯坦求和约定来缩略求和从而表示各个分量之间的关系，其形式较为简单，不易出错，且易于推广到高阶张量。
