--- a/_posts/2024-07-05-傅科摆与微分几何.md
+++ b/_posts/2024-07-05-傅科摆与微分几何.md
@@ -1,6 +1,7 @@
 ---
 title: 傅科摆与微分几何
 description: 使用微分几何分析傅科摆
+toc: true 
 categories:
   - 物理
 tags:
@@ -13,4 +14,4 @@ tags:
 
 ## 《新概念物理》中对傅科摆的分析
 
-
+![示意图]("../pic/2024-07-05/01.png")
