--- a/_posts/2024-07-05-傅科摆与微分几何.md
+++ b/_posts/2024-07-05-傅科摆与微分几何.md
@@ -15,3 +15,5 @@ tags:
 ## 《新概念物理》中对傅科摆的分析
 
 ![示意图](/Cloud/pic/2024-07-05/01.png)
+
+如图所示，假设傅科摆某时刻处于位置 $A$，经过了一个 $\Delta t$ 的时间后随地球自转达到了 $B$。过 $A$、$B$ 两点
