--- a/_posts/2021-2-13-GCore.md
+++ b/_posts/2021-2-13-GCore.md
@@ -17,7 +17,7 @@ Version:0.3.6 Beta
 
 ---
 
-> 在处理器发展的同时，可编程逻辑器件也在持续发展。可编程逻辑器件不仅带来了技术的革新，也带来了观念的革新、设计流程的更新。如今通过编写代码就可在可编程逻辑器件上实现非常复杂的电路设计，于是普通大众终于有机会了解CPU的实现原理，甚至自己设计！
+> 在处理器发展的同时，可编程逻辑器件也在持续发展. 可编程逻辑器件不仅带来了技术的革新，也带来了观念的革新、设计流程的更新. 如今通过编写代码就可在可编程逻辑器件上实现非常复杂的电路设计，于是普通大众终于有机会了解CPU的实现原理，甚至自己设计！
 
 ## GCore结构图
 
@@ -40,7 +40,7 @@ Version:0.3.6 Beta
 
 ## FPGA简介
 
-FPGA 属于专用集成电路中的一种半定制电路。芯片里面有非常多的查找表，通过这些查找表的组合，可实现或与非等数字逻辑。还有时钟模块以实现时序，寄存器模块存储电路状态，RAM模块存储大量数据。**是一种可多次重写来改变内部电路结构的芯片。**
+FPGA 属于专用集成电路中的一种半定制电路. 芯片里面有非常多的查找表，通过这些查找表的组合，可实现或与非等数字逻辑. 还有时钟模块以实现时序，寄存器模块存储电路状态，RAM模块存储大量数据. **是一种可多次重写来改变内部电路结构的芯片. **
 
 ---
 
