--- a/_posts/2023-7-20-指标法.md
+++ b/_posts/2023-7-20-指标法.md
@@ -8,21 +8,21 @@ tags:
   - 矢量分析
 ---
 
-在矢量分析中，一种很方便的方法是指标法。指标法通过爱因斯坦求和约定来缩略求和从而表示各个分量之间的关系，其形式较为简单，不易出错，且易于推广到高阶张量。
+在矢量分析中，一种很方便的方法是指标法. 指标法通过爱因斯坦求和约定来缩略求和从而表示各个分量之间的关系，其形式较为简单，不易出错，且易于推广到高阶张量. 
 
 <!-- more -->
 
-在本文中，我们所讨论的均在笛卡尔坐标系中，不考虑指标的协变与逆变。
+在本文中，我们所讨论的均在笛卡尔坐标系中，不考虑指标的协变与逆变. 
 
 ## 爱因斯坦求和约定
 
 ### 定义
 
-1.  当式子中一个指标出现了两次，那么对这个指标求和，这种指标称为哑指标。
+1.  当式子中一个指标出现了两次，那么对这个指标求和，这种指标称为哑指标. 
 
-2.  在一个式子中，指标最多不超过两次出现。
+2.  在一个式子中，指标最多不超过两次出现. 
 
-3.  一般拉丁字母（$i,j,k$等）认为可取$1,2,3$，而希腊字母（$\mu,\nu,\rho$等）认为可取$0,1,2,3$或者$1,2,3,4$。
+3.  一般拉丁字母（$i,j,k$等）认为可取$1,2,3$，而希腊字母（$\mu,\nu,\rho$等）认为可取$0,1,2,3$或者$1,2,3,4$. 
 
 ### 例子
 
@@ -36,7 +36,7 @@ $$\boldsymbol{a} = a_i e^i$$
 
 $$\boldsymbol{a} = \sum^3_{i=1} a_i e^i$$
 
-其中$e^1,e^2,e^3$表示三维空间的三个**基**（basis），它们是线性无关的。这与前面的$a_i$不同，其不再是实数，故将其指标放在右上角凸显其不同。
+其中$e^1,e^2,e^3$表示三维空间的三个**基**（basis），它们是线性无关的. 这与前面的$a_i$不同，其不再是实数，故将其指标放在右上角凸显其不同. 
 
 #### 矩阵的表示
 
@@ -65,7 +65,7 @@ A_{31} x_1 + A_{32} x_2 + A_{33} x_3 = b_3
 
 $$A_{ij} x_i = b_j$$
 
-其中$j$是哑指标，$i$是自由指标。
+其中$j$是哑指标，$i$是自由指标. 
 
 ## Kronecker Symbol
 
@@ -203,7 +203,7 @@ $$\nabla \times \boldsymbol{A} = \epsilon_{ijk} \partial_i A_j e^k$$
 
 ## 场论公式推导
 
-**注意：**在进行场论公式推导时，$\epsilon_{ijk}, \delta_{ij},e^i$可任意调换位置移动，但$\partial_i$不可以，否则会改变作用对象。
+**注意：**在进行场论公式推导时，$\epsilon_{ijk}, \delta_{ij},e^i$可任意调换位置移动，但$\partial_i$不可以，否则会改变作用对象. 
 
 $\nabla (a b)$:
 
