--- a/_posts/2023-9-10-四元数.md
+++ b/_posts/2023-9-10-四元数.md
@@ -91,7 +91,7 @@ $$D = \frac{\partial}{\partial t} + i \frac{\partial}{\partial x} + j \frac{\par
 
 $$\nabla = i \frac{\partial}{\partial x} + j \frac{\partial}{\partial y} + k \frac{\partial}{\partial z}$$
 
-可以看见，$\nabla$ 算符其实就是四元数求导的空间部分。这里我们把 $\nabla$ 算符当成一个普通的无实部四元数矢量，对于矢量$\vec{a}$，有
+可以看见，$\nabla$ 算符其实就是四元数求导的空间部分. 这里我们把 $\nabla$ 算符当成一个普通的无实部四元数矢量，对于矢量$\vec{a}$，有
 
 $$ \nabla \vec{a} = - \nabla \cdot \vec{a} + \nabla \times \vec{a}$$
 
