--- a/_posts/2024-7-5-傅科摆与微分几何.md
+++ b/_posts/2024-7-5-傅科摆与微分几何.md
@@ -8,7 +8,7 @@ tags:
   - 微分几何
 ---
 
-在《新概念物理》中给出了一个简略运用“几何”的对傅科摆的分析，本文通过微分几何对此推导给出一个严谨的分析. 
+在《新概念物理》中给出了一个简略的对傅科摆的几何分析，本文通过微分几何对此分析给出一个严谨的推导. 
 
 <!-- more -->
 
