--- a/_posts/2024-7-5-傅科摆与微分几何.md
+++ b/_posts/2024-7-5-傅科摆与微分几何.md
@@ -14,7 +14,7 @@ tags:
 
 ## 《新概念物理》中对傅科摆的分析
 
-![示意图](/Cloud/pic/2024-7-5/01.png){:height="36px" width="36px"}
+![示意图](/Cloud/pic/2024-7-5/01.png){:height="70%" width="70%"}
 
 如图所示，假设傅科摆某时刻处于位置 $A$，经过了一个 $\Delta t$ 的时间后随着地球自转达到了 $B$. 过 $A$、$B$ 两点作子午线的切线并交于地轴于同一点，该点与 $A$、$B$ 两点所在纬线圆形成了一个圆锥. 在 $A$、$B$ 两点上沿着水平面作平面直角坐标系，其中 $x$ 轴指向东，$y$ 轴指向北. 
 
@@ -34,7 +34,9 @@ $$ \mathop{AB}\limits^{\frown} =  R \cos \theta \cdot \phi = L \alpha$$
 
 ## 微分几何计算傅科摆
 
-《新概念物理》中对傅科摆的推导简便，但也受限于读者的知识储备没有精确的推导，使得其中的“平行移动”这一步容易令人迷惑. 下面我们借助微分几何给出一个更严谨准确的推导过程. 
+《新概念物理》中对傅科摆的推导简便，但也受限于读者的知识储备没有精确的推导，使得其中的“平行移动”这一步容易令人迷惑. 下面我们借助微分几何给出一个更严谨准确的推导过程[^1]. 
+
+[^1]: 至于为何《新概念物理》中的”平行移动“是对的，可以参考这篇论文：doi: 10.6052/1000-0879-23-422
 
 首先，我们先选取坐标，令 $x^1 = \phi$、$x^2 = \theta$. 我们可以很容易地写出球面下线元的表达式：
 
@@ -121,6 +123,11 @@ $$\mathrm{d} s^2 = R^2 \left(\mathrm{d} x^2 \right)^2 + R^2 \cos^2(\theta) \left
 
 显然，$x^1$ 对应的基矢 $\mathbf{e}_1$ 是 $x^2$ 对应的基矢 $\mathbf{e}_2$ 的 $\cos \theta$ 倍，因此才会出现第一个矩阵和第三个矩阵来“统一”基矢长度. 
 
-> 由于这里的 $x^1$ 是逆变分量，当基矢 $\mathbf{e}_1$ 乘上 $\cos \theta$ 时，对应的 $x^1$ 会乘上 $\sec \theta$. 
+```markdown
+由于这里的 $x^1$ 是逆变分量，当基矢 $\mathbf{e}_1$ 乘上 $\cos \theta$ 时，对应的 $x^1$ 会乘上 $\sec \theta$. 
+{: .notice}
+```
 
 这里的第二个矩阵为旋转矩阵，旋转角度为 $\Phi = \omega t \sin \theta$，旋转角速度为 $\Omega = \omega \sin \theta$. 因此，对于坐标系中的任意一个矢量 $\hat{V_0}$，其会发生进动，进动的角速度为 $\omega \sin \theta$，此即傅科摆进动的角速度. 其中 $\theta$ 为傅科摆所在纬度. 
+
+
