--- a/_posts/2024-7-5-傅科摆与微分几何.md
+++ b/_posts/2024-7-5-傅科摆与微分几何.md
@@ -14,7 +14,9 @@ tags:
 
 ## 《新概念物理》中对傅科摆的分析
 
+<center>
 ![示意图](/Cloud/pic/2024-7-5/01.png){:height="70%" width="70%"}
+</center>
 
 如图所示，假设傅科摆某时刻处于位置 $A$，经过了一个 $\Delta t$ 的时间后随着地球自转达到了 $B$. 过 $A$、$B$ 两点作子午线的切线并交于地轴于同一点，该点与 $A$、$B$ 两点所在纬线圆形成了一个圆锥. 在 $A$、$B$ 两点上沿着水平面作平面直角坐标系，其中 $x$ 轴指向东，$y$ 轴指向北. 
 
