--- a/_posts/2024-7-5-傅科摆与微分几何.md
+++ b/_posts/2024-7-5-傅科摆与微分几何.md
@@ -57,18 +57,18 @@ $$
 \Gamma^1_{12} = \Gamma^1_{21} = -\tan \theta, \quad \Gamma^2_{11} = \sin \theta \cos  \theta
 $$
 
-现在，给定一条曲线 $x^\mu (t)$，其中 $x^1 = \omega t$、$x^2 = \theta$，对于任意矢量 $V^\mu$ 并让此矢量沿着曲线 $x^\mu(t)$ 平行移动，则根据微分几何的结论，其满足如下平行移动方程：
+现在，给定一条曲线 $x^\mu (t)$，其中 $x^1 = \omega t$、$x^2 = \theta$，对于任意矢量 $V^\mu$ 并让此矢量沿着曲线 $x^\mu(t)$ 平行移动，则根据微分几何的结论，其满足如下平行移动方程（记为式 1）：
 
 $$
-\frac{\mathrm{d}}{\mathrm{d} t} V^\mu + \Gamma^\mu_{\sigma \rho} \frac{\mathrm{d} x^\sigma}{\mathrm{d} t} V^\rho = 0 \tag{1}
+\frac{\mathrm{d}}{\mathrm{d} t} V^\mu + \Gamma^\mu_{\sigma \rho} \frac{\mathrm{d} x^\sigma}{\mathrm{d} t} V^\rho = 0
 $$
 
 这是一个一阶线性方程，若给定某点处的初始矢量 $\hat{V_0}$，则可化为一个初值问题. 因此上述方程可以确定沿曲线 $x^\mu(t)$ 的唯一一个矢量场 $\hat{V}(t)$，这由微分方程的唯一性确定. 此矢量场 $\hat{V}(t)$ 便蕴含了我们想要的矢量分量 $V^\mu$ 随时间的变化规律. 
 
- 根据式(1)，我们可以得到如下微分方程：
+ 根据式(1)，我们可以得到如下微分方程（记为式 2）：
 
 $$
-\frac{\mathrm{d} v^1}{\mathrm{d} t} = \omega \tan \theta \cdot v^2, \quad \frac{\mathrm{d}v^2}{\mathrm{d}t} = - \omega \sin \theta \cos \theta \cdot v^1 \tag{2}
+\frac{\mathrm{d} v^1}{\mathrm{d} t} = \omega \tan \theta \cdot v^2, \quad \frac{\mathrm{d}v^2}{\mathrm{d}t} = - \omega \sin \theta \cos \theta \cdot v^1
 $$
 
 记  $\mathbf{v} = (v^1,v^2)^T$，
