--- a/_posts/2024-7-5-傅科摆与微分几何.md
+++ b/_posts/2024-7-5-傅科摆与微分几何.md
@@ -80,18 +80,18 @@ $$\mathbf{A} = \begin{bmatrix} & \tan \theta \\ -\sin \theta \cos \theta & \end{
 $$\frac{\mathrm{d} \mathbf{v}}{\mathrm{d} t} = \omega \mathbf{A} \mathbf{v}$$
 
 
-解为：$\mathbf{v} = \mathbf{v_0} \mathrm{e}^{\omega \mathbf{A} t}$
+解为：$\mathbf{v} = \mathbf{v}_0 \mathrm{e}^{\omega \mathbf{A} t}$
 
 这里出现了 $\mathrm{e}$ 的矩阵次方，下面求出其等价的形式. 先求出矩阵 $A$ 的特征值：$-\mathrm{i} \sin \theta$、$\mathrm{i} \sin \theta$ 以及对应的特征向量：
 
-$$\mathbf{a_1} = \begin{bmatrix}
+$$\mathbf{a}_2 = \begin{bmatrix}
 \frac{\mathrm{i} \sin \theta}{\sin \theta \cos \theta} \\ 1
 \end{bmatrix} ,\quad 
-\mathbf{a_2} = \begin{bmatrix}
+\mathbf{a}_2 = \begin{bmatrix}
 \frac{\tan \theta}{\mathrm{i} \sin \theta} \\ 1
 \end{bmatrix}$$
 
-记 $\mathbf{P} = (\mathbf{a_1},\mathbf{a_2})$，于是有：
+记 $\mathbf{P} = (\mathbf{a}_1,\mathbf{a}_2)$，于是有：
 
 $$\mathbf{P}^{-1} \mathbf{A} \mathbf{P} = \begin{bmatrix}
 -\mathrm{i} \sin \theta & \\ & \mathrm{i} \sin \theta
