--- a/_posts/2024-10-7-gcd和lcm.md
+++ b/_posts/2024-10-7-gcd和lcm.md
@@ -17,7 +17,7 @@ tags:
 顾名思义，最大公约数就是公因数中最大的那一个，我们记 $a$，$b$ 中的最大公约数为 $gcd(a,b)$，其有如下性质：
 
 - $gcd(a,b)=gcd(b,a)$
-- $gcd(a,0)=a$
+- $gcd(a,0)=a \quad (a>0)$
 - $gcd(a,b)=gcd(a-b,b) \quad (a>b)$（辗转相减法）
 - $gcd(a,b) = gcd(a\%b,b)$（辗转相除法，上述性质的“一步到位”，相当于“减到不能再减”）
 - $gcd(a,b,c)=gcd(gcd(a,b),c)$（递推求解多个数的最大公约数）
