--- a/_posts/2024-10-7-gcd和lcm.md
+++ b/_posts/2024-10-7-gcd和lcm.md
@@ -9,10 +9,7 @@ tags:
 ---
 
 <!-- more -->
-
-## 最大公约数和最小公倍数
-
-### 最大公约数
+## 最大公约数
 
 顾名思义，最大公约数就是公因数中最大的那一个，我们记 $a$，$b$ 中的最大公约数为 $gcd(a,b)$，其有如下性质：
 
@@ -33,7 +30,7 @@ long long gcd(long long a,long long b) {
 
 注意当 $b \neq 0$ 时返回的是 $gcd(b,a\%b)$ ，如果为 $gcd(a\%b,b)$ 则函数不断递归进入死循环.
 
-### 最小公倍数
+## 最小公倍数
 
 最小公倍数同样顾名思义就是公倍数中最小的那一个，我们记 $a$，$b$ 中的最小公倍数为 $lcm(a,b)$，有如下性质：
 - $lcm(a,b)=\frac{ab}{gcd(a,b)}$
