--- a/_posts/2024-10-8-质数.md
+++ b/_posts/2024-10-8-质数.md
@@ -9,6 +9,7 @@ tags:
 ---
 
 <!-- more -->
+
 ## 质数判断
 
 最简单的判断质数的方法就是从小到大枚举每一个数看看是否能整除：
@@ -51,7 +52,7 @@ bool isPrime(long long x) {
 
 ## 筛法
 
-现在，我们想计算 $0$ 到 $n$ 中的所有质数. 一个最容易想到的方法就是对每一个小于等于 $n$ 的数进行一次质数检验，其时间复杂度为 $O(n\sqrt{n})$ 显然，这种做法的复杂度显然不是最优的.
+现在，我们想计算 $0$ 到 $n$ 中的所有质数. 一个最容易想到的方法就是对每一个小于等于 $n$ 的数进行一次质数检验，其时间复杂度为 $O(n\sqrt{n})$. 显然，这种做法的复杂度显然不是最优的.
 ### 埃式筛
 
 
