--- a/_posts/2024-10-18-scanf 与空白字符.md
+++ b/_posts/2024-10-18-scanf 与空白字符.md
@@ -31,7 +31,7 @@ tags:
 
 ## 例子
 
-在下面所有例子中，`空` 表示输入一个空格（单纯空格肯能不够明显），`\n` 表示输入一个回车，`\t` 表示输入一个制表符（Tab），同时，可能会有编译器在退出前不会刷新 stdout 缓冲区，导致下面程序的结果无法正常显示，因此可以在下面程序的 `return 0` 前加上一行 `printf("\n")`.
+在下面所有例子中，`空` 表示输入一个空格（单纯空格可能不够明显），`\n` 表示输入一个回车，`\t` 表示输入一个制表符（Tab），同时，可能会有编译器在退出前不会刷新 stdout 缓冲区，导致下面程序的结果无法正常显示，因此可以在下面程序的 `return 0` 前加上一行 `printf("\n")`.
 
 ### 例一
 
