--- a/_posts/2024-10-18-scanf 与空白字符.md
+++ b/_posts/2024-10-18-scanf 与空白字符.md
@@ -27,7 +27,7 @@ tags:
 当然，我们一般只使用 `\n`、`\t`、` ` 这三个. 因此在后文的例子中我们只使用这三个空白字符.
 {: .notice}
 
-前文的介绍可能比较抽象，简而言之：在 scanf 中，`\n`、`\t`、` ` 以及上述标准空白字符均等价，且均会匹配*任意数量*的空白字符。具体行为可看下面的具体例子：
+前文的介绍可能比较抽象，简而言之：在 scanf 中，`\n`、`\t`、` ` 以及上述标准空白字符均等价，且均会匹配**任意数量**的空白字符。具体行为可看下面的具体例子：
 
 ## 例子
 
@@ -118,7 +118,7 @@ int main() {
 
 输入：`123\n`
 
-这里我们可能会认为当输入 `\n` 后程序会马上显示输出. 但实际上我们会发现程序仍在等待我们的输入，即使我们在多输入几次 `\n` 或者 `\t` 或者 `空` 也仍在等待我们输入. 这是因为在 scanf 中最后的那一个空格会匹配*任意数量*的空白字符，而 scanf 并不知道要匹配多少个空白字符，因此一直在等待输入（注意 `\t`、`\n`、`空` 均为空白字符）当我们在上述输入后再次输入：`a\n`
+这里我们可能会认为当输入 `\n` 后程序会马上显示输出. 但实际上我们会发现程序仍在等待我们的输入，即使我们在多输入几次 `\n` 或者 `\t` 或者 `空` 也仍在等待我们输入. 这是因为在 scanf 中最后的那一个空格会匹配**任意数量**的空白字符，而 scanf 并不知道要匹配多少个空白字符，因此一直在等待输入（注意 `\t`、`\n`、`空` 均为空白字符）当我们在上述输入后再次输入：`a\n`
 
 此时程序输出 `a=123`，缓冲区还剩下 `a\n`，可以用如下程序进行验证：
 
