--- a/_posts/2024-10-18-scanf 与空白字符.md
+++ b/_posts/2024-10-18-scanf 与空白字符.md
@@ -118,7 +118,7 @@ int main() {
 
 输入：`123\n`
 
-这里我们可能会认为当输入 `\n` 后程序会马上显示输出. 但实际上我们会发现程序仍在等待我们的输入，即使我们在多输入几次 `\n` 或者 `\t` 或者 `空` 也仍在等待我们输入. 这是因为在 scanf 中最后的那一个空格会匹配**任意数量**的空白字符，而 scanf 并不知道要匹配多少个空白字符，因此一直在等待输入（注意 `\t`、`\n`、`空` 均为空白字符）当我们在上述输入后再次输入：`a\n`
+这里我们可能会认为当输入 `\n` 后程序会马上显示输出. 但实际上我们会发现程序仍在等待我们的输入，即使我们在多输入几次 `\n` 或者 `\t` 或者 `空` 也仍在等待我们输入. 这是因为在 scanf 中最后的那一个空格会匹配**任意数量**的空白字符，而 scanf 并不知道要匹配多少个空白字符，因此一直在等待输入（注意 `\t`、`\n`、`空` 均为空白字符）当我们在上述输入后再次输入带有非空白字符的内容：`a\n`
 
 此时程序输出 `a=123`，缓冲区还剩下 `a\n`，可以用如下程序进行验证：
 
