--- a/_posts/2024-10-18-scanf 与空白字符.md
+++ b/_posts/2024-10-18-scanf 与空白字符.md
@@ -17,7 +17,7 @@ tags:
 > 空白字符：任何格式字符串中的单个空白字符处理所有来自输入的可用连续空白字符（如同通过于循环中调用 isspace 确定）. 注意，格式字符串中 `\n`、` `、`\t\t` 或其他空白无区别.[^1]
 
 在 C 99 中，标准空白字符包括：
-- 空格 (0x20) ` `
+- 空格 (0x20) 
 - 换页 (0x2c) `\f`
 - 换行 (0x0a) `\n`
 - 回车 (0x0d) `\r`
@@ -31,7 +31,7 @@ tags:
 
 ## 例子
 
-在下面所有例子中，`空` 表示输入一个空格（单纯空格可能不够明显），`\n` 表示输入一个回车，`\t` 表示输入一个制表符（Tab），同时，可能会有编译器在退出前不会刷新 stdout 缓冲区，导致下面程序的结果无法正常显示，因此可以在下面程序的 `return 0` 前加上一行 `printf("\n")`.
+在下面所有例子中，`空` 表示输入一个空格（单纯空格可能在网页中显示不够明显），`\n` 表示输入一个回车，`\t` 表示输入一个制表符（Tab），同时，可能会有编译器在退出前不会刷新 stdout 缓冲区，导致下面程序的结果无法正常显示，因此可以在下面程序的 `return 0` 前加上一行 `printf("\n")`.
 
 ### 例一
 
