--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -7,7 +7,7 @@ tags:
   - 微分方程
 ---
 
-本文介绍了常数变易法的原理[^1]，并给出在多个方程的情况下的推广。
+本文介绍了常数变易法的原理，并给出在多个方程的情况下的推广。
 
 [^1]: 参考书籍 Hale, J.K. (1980) *Ordinary Differential Equations*. Second Edition, Wiley Interscience, New York. 
 
@@ -54,7 +54,9 @@ $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 现在我们给出如下 Lemma：
 
 如果 $\mathbf{X}$ 是齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，则其逆矩阵 $\mathbf{X}^{-1}$ 是如下**对偶方程**的基解矩阵：
+
 $$ \mathbf{y}' = - \mathbf{y} \mathbf{A} $$
+
 其中 $y \in C^{1 \times n}$，即 $\mathbf{X}^{-1}$ 的每个行向量都是对偶方程的解.
 {: .notice}
 
