--- a/_posts/2023-7-20-指标法.md
+++ b/_posts/2023-7-20-指标法.md
@@ -7,9 +7,11 @@ tags:
   - 矢量分析
 ---
 
-在矢量分析中，一种很方便的方法是指标法. 指标法通过爱因斯坦求和约定来缩略求和从而表示各个分量之间的关系，其形式较为简单，不易出错，且易于推广到高阶张量. 
+指标法的简要介绍以及其在矢量分析中的运用。
 
 <!-- more -->
+
+在矢量分析中，一种很方便的方法是指标法. 指标法通过爱因斯坦求和约定来缩略求和从而表示各个分量之间的关系，其形式较为简单，不易出错，且易于推广到高阶张量. 
 
 在本文中，我们所讨论的均在笛卡尔坐标系中，不考虑指标的协变与逆变. 
 
