--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -9,9 +9,9 @@ tags:
 
 本文介绍了常数变易法的原理，并给出在多个方程的情况下的推广。
 
-[^1]: 参考书籍 Hale, J.K. (1980) *Ordinary Differential Equations*. Second Edition, Wiley Interscience, New York. 
-
 <!-- more -->
+
+ 参考书籍 Hale, J.K. (1980) *Ordinary Differential Equations*. Second Edition, Wiley Interscience, New York. 
 
 ## 一阶线性常微分方程组
 
@@ -27,11 +27,11 @@ $$ x'_i = \sum_{j=1}^n a_{ij} x_j + b_i ,\quad j=1,2,\dots,n $$
 
 $$ \mathbf{x}' = \mathbf{A} \mathbf{x} + \mathbf{b} $$
 
-其中，$\mathbf{x}, \mathbf{b} \in C^{n \times 1}$，$\mathbf{A} \in C^{n \times n}$，$C$ 为函数空间[^2]（即其中的每一个元素都是一个函数）
+其中，$\mathbf{x}, \mathbf{b} \in C^{n \times 1}$，$\mathbf{A} \in C^{n \times n}$，$C$ 为函数空间[^1]（即其中的每一个元素都是一个函数）
 
 > 下文中粗体符号（如$\mathbf{x}$）之类的默认表示一个函数矩阵，没有粗体的（如 $x$）表示一个函数.
 
-[^2]:这里我们不对此处的函数空间的性质做严格说明，我们相信这里的函数空间的性质足够好（雾）.
+[^1]:这里我们不对此处的函数空间的性质做严格说明，我们相信这里的函数空间的性质足够好（雾）.
 
 当上式中的非齐次项 $\mathbf{b} = \mathbf{0}$ 时，上述方程变为 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 称为一阶线性齐次方程组.
 
@@ -43,13 +43,15 @@ $$ \mathrm{D}:C^{m \times n} \to C^{m \times n}, \quad \mathbf{X} = (x_{ij})_{m 
 
 首先，我们先来研究较为简单的齐次的情况：
 
-对于齐次方程组，若我们可以得到 $n$ 个线性无关的特解 $\mathbf{x}_1,\mathbf{x}_2,\dots,\mathbf{x}_n \in C^{n \times 1}$（实际上，当系数矩阵在区间上连续时，我们总能得到 $n$ 个线性无关的特解），这 $n$ 个解构成解空间 $V_{sol}$ 的一组完备的基底，因此我们可以通过这一组特解得到所有的解. 同时，这一组特解可以拼接成一个 $n \times n$ 的函数矩阵 $\mathbf{X}$：
+对于齐次方程组，若我们可以得到 $n$ 个线性无关的特解[^2] $\mathbf{x}_1,\mathbf{x}_2,\dots,\mathbf{x}_n \in C^{n \times 1}$，这 $n$ 个解构成解空间 $V_{sol}$ 的一组完备的基底，因此我们可以通过这一组特解得到所有的解. 同时，这一组特解可以拼接成一个 $n \times n$ 的函数矩阵 $\mathbf{X}$：
+
+[^2]: 实际上，当系数矩阵在区间上连续时，我们总能得到 $n$ 个线性无关的特解，此处证明略.
 
 $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 
 我们称这个矩阵为**基解矩阵**此矩阵表示一个从 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
 
-由于 $\mathbf{x}_1,\mathbf{x}_2,\dots,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标。
+由于 $\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标。
 
 现在我们给出如下 Lemma：
 
@@ -58,7 +60,6 @@ $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 $$ \mathbf{y}' = - \mathbf{y} \mathbf{A} $$
 
 其中 $y \in C^{1 \times n}$，即 $\mathbf{X}^{-1}$ 的每个行向量都是对偶方程的解.
-{: .notice}
 
 ## 常数变易法
 
