--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -19,7 +19,7 @@ tags:
 
 $$ x'(t) = a(t) x(t) + b(t) $$
 
-对于 $n$ 个方程，其构成一个一阶线性方程组，可以写成（为了方便，下文中我们省略自变量，如无特殊说明，自变量均为 $t$）
+对于 $$n$$ 个方程，其构成一个一阶线性方程组，可以写成（为了方便，下文中我们省略自变量，如无特殊说明，自变量均为 $$t$$）
 
 $$ x'_i = \sum_{j=1}^n a_{ij} x_j + b_i ,\quad j=1,2,\dots,n $$
 
@@ -27,15 +27,15 @@ $$ x'_i = \sum_{j=1}^n a_{ij} x_j + b_i ,\quad j=1,2,\dots,n $$
 
 $$ \mathbf{x}' = \mathbf{A} \mathbf{x} + \mathbf{b} $$
 
-其中，$\mathbf{x}, \mathbf{b} \in C^{n \times 1}$，$\mathbf{A} \in C^{n \times n}$，$C$ 为函数空间[^1]（即其中的每一个元素都是一个函数）
+其中，$$\mathbf{x}, \mathbf{b} \in C^{n \times 1}$$，$$\mathbf{A} \in C^{n \times n}$$，$$C$$ 为函数空间[^1]（即其中的每一个元素都是一个函数）
 
-> 下文中粗体符号（如$\mathbf{x}$）之类的默认表示一个函数矩阵，没有粗体的（如 $x$）表示一个函数.
+> 下文中粗体符号（如$$\mathbf{x}$$）之类的默认表示一个函数矩阵，没有粗体的（如 $$x$$）表示一个函数.
 
 [^1]:这里我们不对此处的函数空间的性质做严格说明，我们相信这里的函数空间的性质足够好（雾）.
 
-当上式中的非齐次项 $\mathbf{b} = \mathbf{0}$ 时，上述方程变为 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 称为一阶线性齐次方程组.
+当上式中的非齐次项 $$\mathbf{b} = \mathbf{0}$$ 时，上述方程变为 $$\mathbf{x}' = \mathbf{A} \mathbf{x}$$ 称为一阶线性齐次方程组.
 
-同时，上面式子中，求导可以看成是某种线性变换（显然求导是线性的），记求导的线性算符为 $\mathrm{D}$，并定义对于一个函数矩阵 $\mathbf{X}$，当求导算符 $\mathrm{D}$ 作用在 $\mathbf{X}$ 之上时，记为 $\mathrm{D}[\mathbf{X}]$，表示对 $\mathbf{X}$ 中的每一个元素（$\mathbf{X}$ 是函数矩阵，其每一个元素都是一个函数）进行求导，并组成一个新的矩阵，即
+同时，上面式子中，求导可以看成是某种线性变换（显然求导是线性的），记求导的线性算符为 $$\mathrm{D}$$，并定义对于一个函数矩阵 $$\mathbf{X}$$，当求导算符 $$\mathrm{D}$$ 作用在 $$\mathbf{X}$$ 之上时，记为 $$\mathrm{D}[\mathbf{X}]$$，表示对 $$\mathbf{X}$$ 中的每一个元素（$$\mathbf{X}$$ 是函数矩阵，其每一个元素都是一个函数）进行求导，并组成一个新的矩阵，即
 
 $$ \mathrm{D}:C^{m \times n} \to C^{m \times n}, \quad \mathbf{X} = (x_{ij})_{m \times n}, \quad \mathrm{D}[\mathbf{X}] = (x_{ij}')_{m \times n} $$
 
@@ -43,23 +43,23 @@ $$ \mathrm{D}:C^{m \times n} \to C^{m \times n}, \quad \mathbf{X} = (x_{ij})_{m 
 
 首先，我们先来研究较为简单的齐次的情况：
 
-对于齐次方程组，若我们可以得到 $n$ 个线性无关的特解[^2] $\mathbf{x}_1,\mathbf{x}_2,\dots,\mathbf{x}_n \in C^{n \times 1}$，这 $n$ 个解构成解空间 $V_{sol}$ 的一组完备的基底，因此我们可以通过这一组特解得到所有的解. 同时，这一组特解可以拼接成一个 $n \times n$ 的函数矩阵 $\mathbf{X}$：
+对于齐次方程组，若我们可以得到 $$n$$ 个线性无关的特解[^2] $$\mathbf{x}_1,\mathbf{x}_2,\dots,\mathbf{x}_n \in C^{n \times 1}$$，这 $$n$$ 个解构成解空间 $$V_{sol}$$ 的一组完备的基底，因此我们可以通过这一组特解得到所有的解. 同时，这一组特解可以拼接成一个 $$n \times n$$ 的函数矩阵 $$\mathbf{X}$$：
 
-[^2]: 实际上，当系数矩阵在区间上连续时，我们总能得到 $n$ 个线性无关的特解，此处证明略.
+[^2]: 实际上，当系数矩阵在区间上连续时，我们总能得到 $$n$$ 个线性无关的特解，此处证明略.
 
 $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 
-我们称这个矩阵为**基解矩阵**此矩阵表示一个从 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
+我们称这个矩阵为**基解矩阵**此矩阵表示一个从 $$\mathbb{R}^{n \times 1} \to V_{sol}$$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
 
-由于 $\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标。
+由于 $$\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$$ 线性无关，因此 $$\det \mathbf{X} \neq 0$$，有逆矩阵 $$\mathbf{X}^{-1}$$ 存在，且 $$\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$$（$$\mathbf{I}$$ 为单位矩阵），显然，逆矩阵 $$\mathbf{X}^{-1}$$ 表示一个从 $$V_{sol} \to \mathbb{R}^{n \times 1}$$ 的映射，其输入一个特解，输出在这组基底下的坐标。
 
 现在我们给出如下 Lemma：
 
-如果 $\mathbf{X}$ 是齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，则其逆矩阵 $\mathbf{X}^{-1}$ 是如下**对偶方程**的基解矩阵：
+如果 $$\mathbf{X}$$ 是齐次方程 $$\mathbf{x}' = \mathbf{A} \mathbf{x}$$ 的基解矩阵，则其逆矩阵 $$\mathbf{X}^{-1}$$ 是如下**对偶方程**的基解矩阵：
 
 $$ \mathbf{y}' = - \mathbf{y} \mathbf{A} $$
 
-其中 $y \in C^{1 \times n}$，即 $\mathbf{X}^{-1}$ 的每个行向量都是对偶方程的解.
+其中 $$y \in C^{1 \times n}$$，即 $$\mathbf{X}^{-1}$$ 的每个行向量都是对偶方程的解.
 
 ## 常数变易法
 
