--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -49,18 +49,50 @@ $$ \mathrm{D}:C^{m \times n} \to C^{m \times n}, \quad \mathbf{X} = (x_{ij})_{m 
 
 $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 
-我们称这个矩阵为**基解矩阵**此矩阵表示一个从 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
+我们称这个矩阵为**基解矩阵**，此矩阵表示一个从 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
 
 由于 $\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标。
 
 现在我们给出如下 Lemma：
 
-如果 $\mathbf{X}$ 是齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，则其逆矩阵 $\mathbf{X}^{-1}$ 是如下**对偶方程**的基解矩阵：
+$\mathbf{Lemma.}$ 如果 $\mathbf{X}$ 是齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，则其逆矩阵 $\mathbf{X}^{-1}$ 是如下**对偶方程**的基解矩阵：
 
 $$ \mathbf{y}' = - \mathbf{y} \mathbf{A} $$
 
 其中 $y \in C^{1 \times n}$，即 $\mathbf{X}^{-1}$ 的每个行向量都是对偶方程的解.
 
+$\mathbf{Proof:}$ 由于 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$，两端求导，得到 $\mathrm{D}[\mathbf{X}^{-1}] \mathbf{X} + \mathbf{X}^{-1} \mathrm{D}[\mathbf{X}] = 0$，由于 $\mathrm{D}[\mathbf{X}] = \mathbf{A} \mathbf{X}$，得到 $\mathrm{D}[\mathbf{X}^{-1}] \mathbf{X} = -\mathbf{X}^{-1} \mathbf{A} \mathbf{X}$，两端乘上 $\mathbf{X}^{-1}$，得到 $\mathrm{D}[\mathbf{X}^{-1}] = - \mathbf{X}^{-1} \mathbf{A}$，因此，$\mathbf{X}^{-1}$ 是方程 $\mathbf{y}' = -\mathbf{y} \mathbf{A}$ 的基解矩阵. $\square$
+
+> 这里 $\mathbf{y}$ 是行向量而不是列向量是因为 $-\mathbf{X}^{-1} \mathbf{A}$ 这里的 $\mathbf{A}$ 是右乘，因此其 $\mathbf{X}^{-1}$ 只能是行向量的解拼接得到的矩阵.
+
 ## 常数变易法
 
+前文我们一直在研究齐次的情况，现在我们来研究非齐次的情况. 对于非齐次方程：
 
+$$
+\begin{equation}
+\mathbf{x}' = \mathbf{A} \mathbf{x} + \mathbf{b}
+\end{equation}
+$$
+
+上式可以改写为 $\mathbf{x}' - \mathbf{A} \mathbf{x} = \mathbf{b}$. 记 $\mathbf{X}$ 是上述方程对应的齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，现在，我们计算：
+
+$$
+\mathrm{D}[\mathbf{X}^{-1} \mathbf{x}] = \mathrm{D}[\mathbf{X}^{-1}] \mathbf{x} + \mathbf{X}^{-1} \mathrm{D}[\mathbf{x}]
+$$
+
+现在，我们使用前文的 $\mathbf{Lemma}$，有 $\mathrm{D}[\mathbf{X}^{-1}] = - \mathbf{X}^{-1} \mathbf{A}$，同时，由原方程 $(1)$，有：
+
+$$
+\mathrm{D}[\mathbf{X}^{-1} \mathbf{x}] = - \mathbf{X}^{-1} \mathbf{A} \mathbf{x} + \mathbf{X}^{-1} (\mathbf{A} \mathbf{x} + \mathbf{b})
+$$
+
+因此，我们可以得到：
+
+$$
+\begin{equation}
+\boxed{\mathrm{D}[\mathbf{X}^{-1} \mathbf{x}] = \mathbf{X}^{-1} \mathbf{b}}
+\end{equation}
+$$
+
+现在我们来讨论一下上式的意义. 不难发现，当 $\mathbf{b}=0$ 即齐次的情况时， 
