--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -13,7 +13,7 @@ tags:
 
  参考书籍 Hale, J.K. (1980) *Ordinary Differential Equations*. Second Edition, Wiley Interscience, New York. 
 
-## 一阶线性常微分方程组
+## 一阶线性微分方程组
 
 在高等数学中，我们常见的一阶线性方程可以写成如下形式：
 
@@ -75,7 +75,7 @@ $$
 \end{equation}
 $$
 
-上式可以改写为 $\mathbf{x}' - \mathbf{A} \mathbf{x} = \mathbf{b}$. 记 $\mathbf{X}$ 是上述方程对应的齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，现在，我们计算：
+上式可以改写为 $\mathbf{x}' - \mathbf{A} \mathbf{x} = \mathbf{b}$. 记 $\mathbf{X}$ 是上述方程对应的齐次方程 $\mathbf{x}' = \mathbf{A} \mathbf{x}$ 的基解矩阵，设 $\mathbf{x}$ 是非齐次方程 $\mathbf{x}'=\mathbf{A} \mathbf{x}+\mathbf{b}$ 的解，现在，我们计算：
 
 $$
 \mathrm{D}[\mathbf{X}^{-1} \mathbf{x}] = \mathrm{D}[\mathbf{X}^{-1}] \mathbf{x} + \mathbf{X}^{-1} \mathrm{D}[\mathbf{x}]
@@ -95,4 +95,27 @@ $$
 \end{equation}
 $$
 
-现在我们来讨论一下上式的意义. 不难发现，当 $\mathbf{b}=0$ 即齐次的情况时， 
+现在我们来讨论一下上式的意义. 不难发现，当 $\mathbf{b}=0$ 即齐次的情况时，$\mathrm{D}[\mathbf{X}^{-1}\mathbf{x}] = \mathbf{0}$，即微分方程的解 $\mathbf{x}$ 用齐次方程的基解矩阵 $\mathbf{X}$ 对应的基底表示时的坐标为常数，保持不变，此即常数变易法中的常数. 
+
+但当 $\mathbf{b} \neq \mathbf{0}$ 时，即非齐次的情况，我们可以得到，微分方程的解 $\mathbf{x}$ 用齐次方程的基解矩阵 $\mathbf{X}$ 对应的坐标表示时的坐标随时间发生了变化，即原本的常数 $\mathbf{c} \in \mathbb{R}^n$ 变成了函数 $\mathbf{c} \in C^n$，在原本的常数变易法中就是把常数 $c_i$ 换成了函数 $c_i(t)$（$i = 1,2,\dots,n$），再通过“待定函数”具体求出 $c_i(t)$.
+
+## 非齐次方程的解
+
+有了前文的式 $(2)$，我们便可以得出一般情况下非齐次的一阶线性微分的解：
+
+$\mathbf{Theorem}.$ 若 $\mathbf{X}$ 是齐次方程 $\mathbf{x}'=\mathbf{A}\mathbf{x}$ 的基解矩阵，则非齐次方程 $\mathbf{x}'=\mathbf{A}\mathbf{x}+\mathbf{b}$ 的解为：
+
+$$
+\mathbf{x}(t) = \mathbf{X}(t) \left[ \mathbf{X}^{-1}(\tau) \mathbf{x}(\tau) + \int_\tau^t \mathbf{X}^{-1}(s) \mathbf{b}(s) \ \mathrm{d} s \right]
+$$
+其中 $\tau$ 是一个常数. $\mathbf{x}(\tau)$ 即方程的初值条件.
+
+上述的证明在有了前文常数变易法的推导后变得非常简单：
+
+$\mathbf{Proof}:$ 根据前文，式 $(2)$ 两端积分，得到：
+
+$$\mathbf{X}^{-1}(t) \mathbf{x}(t) - \mathbf{X}^{-1}(\tau) \mathbf{x}(\tau) = \int_\tau^t \mathbf{X}^{-1}(s)\mathbf{b}(s) \ \mathrm{d} s$$
+
+移项后乘上 $\mathbf{X}(t)$ 后便得到要证明的结论. $\square$
+
+
