--- a/_posts/2025-2-7-常数变易法.md
+++ b/_posts/2025-2-7-常数变易法.md
@@ -7,7 +7,7 @@ tags:
   - 微分方程
 ---
 
-本文介绍了常数变易法的原理，并给出在多个方程的情况下的推广。
+本文介绍了常数变易法的原理，并给出在多个方程的情况下的推广. 
 
 <!-- more -->
 
@@ -49,9 +49,9 @@ $$ \mathrm{D}:C^{m \times n} \to C^{m \times n}, \quad \mathbf{X} = (x_{ij})_{m 
 
 $$ \mathbf{X} = [\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}] $$
 
-我们称这个矩阵为**基解矩阵**，此矩阵表示一个 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解。实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标。
+我们称这个矩阵为**基解矩阵**，此矩阵表示一个 $\mathbb{R}^{n \times 1} \to V_{sol}$ 的线性变换，其输入一组坐标，输出一个通过这一组基底表示的特解. 实际上，当我们从齐次方程的通解待定常数计算符合我们的初值条件的特解时，其本质就是在求特解通过这一组基底表示时的坐标. 
 
-由于 $\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标。
+由于 $\mathbf{x}_1,\mathbf{x}_2,\dots ,\mathbf{x_n}$ 线性无关，因此 $\det \mathbf{X} \neq 0$，有逆矩阵 $\mathbf{X}^{-1}$ 存在，且 $\mathbf{X}^{-1} \mathbf{X} = \mathbf{I}$（$\mathbf{I}$ 为单位矩阵），显然，逆矩阵 $\mathbf{X}^{-1}$ 表示一个从 $V_{sol} \to \mathbb{R}^{n \times 1}$ 的映射，其输入一个特解，输出在这组基底下的坐标. 
 
 现在我们给出如下 Lemma：
 
