--- a/_posts/2025-2-19-三重叉积证明.md
+++ b/_posts/2025-2-19-三重叉积证明.md
@@ -39,7 +39,7 @@ $$
 (\mathbf{b} \cdot \mathbf{c}) (\mathbf{a} \cdot \mathbf{c}) - (\mathbf{a} \cdot \mathbf{c}) (\mathbf{b} \cdot \mathbf{c}) = 0
 $$
 
-因此，$\forall p \in \mathbb{R}$ 且 $p \neq 0$，使得：
+因此，$\exists p \in \mathbb{R}$ 且 $p \neq 0$，使得：
 
 $$ m = p(\mathbf{b} \cdot \mathbf{c}) $$
 $$ n =-p(\mathbf{a} \cdot \mathbf{c}) $$
