--- a/_posts/2025-2-19-三重叉积证明.md
+++ b/_posts/2025-2-19-三重叉积证明.md
@@ -30,7 +30,7 @@ $$
 用 $\mathbf{c}$ 点乘左右两边，有：
 
 $$
-\mathbf{0} = m (\mathbf{a} \cdot \mathbf{c}) + n (\mathbf{b} \cdot \mathbf{c})
+0 = m (\mathbf{a} \cdot \mathbf{c}) + n (\mathbf{b} \cdot \mathbf{c})
 $$
 
 由于有如下式子恒成立：
